--- a/templates/finance/transfer_form.html
+++ b/templates/finance/transfer_form.html
@@ -26,7 +26,7 @@
         </div>
       </div>
       <div class="col-md-4 position-relative">
-        <label for="validationTooltip03" class="form-label" style="border-radius: 5px; color: black;">Enter Bank Name$</label>
+        <label for="validationTooltip03" class="form-label" style="border-radius: 5px; color: black;">Enter Bank Name</label>
         <input style="width: 330px;" type="text" class="form-control" id="validationTooltip03" required>
         <div class="valid-tooltip">
           Looks good!
